--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@
                 <div class="timeline-date">2023</div>
                 <div class="timeline-content left">
                     <h3>Freelancer UI/UX Design</h3>
-                    <p>Menjadi freelancer UI Designer yang berfokus pada pembuatan
-                        antarmuka digital yang estetis, intuitif, dan user-friendly. Dengan
-                        keahlian dalam desain visual, warna, tipografi, dan layout</p>
+                    <p>Become a freelancer UI Designer who focuses on creating aesthetic, intuitive, and user-friendly
+                        digital interfaces. With expertise in visual design, color, typography, and layout.</p>
                 </div>
             </div>
 
@@ -233,9 +232,8 @@
                 <div class="timeline-date">2023</div>
                 <div class="timeline-content right">
                     <h3>Microsoft Student Representative Telkom</h3>
-                    <p>menjabat sebagai perwakilan mahasiswa Microsoft di Telkom University dengan tugas utama
-                        mempelajari produk teknologi Microsoft
-                        dan memperkenalkan mereka ke seluruh lingkungan kampus.</p>
+                    <p>Served as a Microsoft student representative at Telkom University with the main task of learning
+                        Microsoft technology products and introducing them to the entire campus environment.</p>
                 </div>
             </div>
 
